# python-tool-competition-2024

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: check.yaml
python_tool_competition_2024/: __init__.py  cli.py  config.py  errors.py  generation_results.py  generator_plugins.py  generators.py  reporters.py  results.py  target_finder.py  validation.py  version.py
python_tool_competition_2024/calculation/: __init__.py  cli_runner.py  coverage_caluclator.py  generation_results_calculator.py
python_tool_competition_2024/calculation/mutation_calculator/: __init__.py  cosmic_ray_calculator.py  helpers.py  mutpy_calculator.py
python_tool_competition_2024/caluclation/: __init__.py  generation_results_calculator.py  mutation_caluclator.py
python_tool_competition_2024/cli/: __init__.py  helpers.py  init_command.py  run_command.py
python_tool_competition_2024/reporters/: __init__.py  cli_reporter.py  csv_reporter.py
python_tool_competition_2024/targets/: example1.py  example2.py
python_tool_competition_2024/targets/sub_example/: __init__.py  example3.py
python_tool_competition_2024/templates/: .gitignore  README.md
python_tool_competition_2024/templates/__var__module_name/: __init__.py  generator.py
python_tool_competition_2024/templates/targets/sub_example/: __init__.py  example4.py
stubs/defusedxml/: ElementTree.pyi
targets/: example1.py  example2.py
targets/sub_example/: __init__.py  example3.py
templates/: README.md
templates/__var__module_name/: generator.py
tests/: conftest.py  example_generators.py  helpers.py  test_cli.py  test_config.py  test_generation_results.py  test_generators.py  test_results.py  test_target_finder.py
tests/calculation/: test_cli_runner.py  test_coverage_calculator.py
tests/calculation/mutation_calculator/: test_cosmic_ray_calculator.py  test_helpers.py  test_mutpy_calculator.py
tests/cli/: helpers.py  test_init.py  test_main.py  test_run.py
